# personal-site

./: .gitigore  Cargo.toml  build.rs  flake.nix  justfile  tailwind.config.js
assets/posts/: 1-hello.md
css/: input.css
locales/: en.yaml  hu.yaml
nix/: effects.nix  flake-module.nix
src/: lib.rs  main.rs
src/app/: about.rs  home.rs  mod.rs  posts.rs
src/app/posts/: id.rs  load.rs  mod.rs
