[package]
authors = ["akosnad"]
name = "personal-site"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_actix = { version = "0.8.2", optional = true }
leptos_router = { version = "0.8.2" }
wasm-bindgen = "=0.2.100"
leptos_i18n = { version = "0.6.0-rc.2", features = [
  "cookie",
], default-features = false }
leptos_icons = "0.6"
leptos-use = { version = "0.16", features = ["storage"] }
icondata = "0.6.0"
codee = "0.3"
serde = "1"

[features]
csr = ["leptos/csr", "leptos_i18n/csr", "leptos_i18n_build/csr"]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate", "leptos_i18n_build/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_i18n/actix",
  "leptos_i18n_build/ssr",
  "leptos-use/actix",
  "leptos-use/ssr",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.wasm-release]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
leptos_i18n_build = "0.6.0-rc.2"

[package.metadata.leptos]
site-addr = "0.0.0.0:3000"
tailwind-input-file = "css/input.css"
assets-dir = "assets"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "hu"]
