[package]
authors = ["akosnad"]
name = "personal-site"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_actix = { version = "0.8.2", optional = true }
leptos_router = { version = "0.8.2" }
wasm-bindgen = "=0.2.100"
leptos_icons = "0.6"
leptos-use = { version = "0.16", features = ["storage"] }
icondata = "0.6.0"
codee = "0.3"
serde = "1"
regex = "1.11.1"
anyhow = "1.0.98"
markdown = { version = "1.0.0", optional = true, features = ["serde"] }
mdast_util_to_markdown = { version = "0.0.2", optional = true }
tree-sitter-highlight = { version = "0.25.8", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
html-escape = { version = "0.2.13", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
katex = { version = "0.4.6", optional = true }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/actix",
  "leptos-use/ssr",
  "dep:markdown",
  "dep:mdast_util_to_markdown",
  "dep:html-escape",
  "dep:tree-sitter-highlight",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-html",
  "dep:katex",
]
markdown = ["dep:markdown"]
tree-sitter-highlight = ["dep:tree-sitter-highlight"]
tree-sitter-rust = ["dep:tree-sitter-rust"]
html-escape = ["dep:html-escape"]
tree-sitter-html = ["dep:tree-sitter-html"]
katex = ["dep:katex"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.wasm-release]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
site-addr = "0.0.0.0:3000"
tailwind-input-file = "css/input.css"
assets-dir = "assets"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
